[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "bswck", email = "bartoszpiotrslawecki@gmail.com" }]
dependencies = [
    "sqlmodel>=0.0.21",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
    "mypy>=1.11.1",
]
